# sysdeck

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  build.rs
backend/src/: audit.rs  auth.rs  db.rs  disks.rs  embed.rs  file_manager.rs  hardware.rs  icons.rs  input.rs  lib.rs  main.rs  network.rs  power.rs  process.rs  saved_scripts.rs  script.rs  sessions.rs  settings.rs  setup.rs  telemetry.rs  terminal.rs  tunnel.rs  windows.rs  wol.rs  ws.rs
backend/tests/: integration.rs
backend/tests/common/: mod.rs
cross/: Dockerfile.x86_64-unknown-linux-gnu
docs/: phase0.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
docs/superpowers/specs/: 2025-06-30-tunnel-battery-relay-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/.auth/: user.json
frontend/e2e/: global-setup.ts  playwright.config.ts
frontend/e2e/helpers/: totp.ts
frontend/e2e/specs/: audit.spec.ts  controls.spec.ts  dashboard.spec.ts  files.spec.ts  login.spec.ts  scripts-live.spec.ts  scripts.spec.ts  settings.spec.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: InitProgress.tsx
frontend/src/components/layout/: AppLayout.tsx  BottomNav.tsx  MoreSheet.tsx  ProtectedRoute.tsx  Sidebar.tsx  WebSocketProvider.tsx
frontend/src/components/overview/: AdminCockpit.tsx  AmbientOverlay.tsx  AppDeck.tsx  OverviewHero.tsx  QuickToggles.tsx  RadialGauge.tsx  ScrollIndicator.tsx  SwipeHint.tsx  SystemVitals.tsx
frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  confirm-dialog.tsx  empty-state.tsx  info-button.tsx  input.tsx  skeleton.tsx  switch.tsx  toast.tsx  totp-input.tsx
frontend/src/hooks/: use-ambient.ts  use-clock.ts  use-scroll-section.ts  use-wake-lock.ts  use-websocket.ts
frontend/src/lib/: api.ts  audit-store.ts  files-store.ts  navigation.ts  scripts-store.ts  store.ts
frontend/src/pages/: Audit.tsx  ControlCenter.tsx  Controls.tsx  Dashboard.tsx  Files.tsx  Login.tsx  Overview.tsx  RemoteDesktop.tsx  Scripts.tsx  Settings.tsx  Setup.tsx  TerminalTab.tsx
