[package]
name = "nodedesk-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "nodedesk_agent"
path = "src/lib.rs"

[[bin]]
name = "nodedesk-agent"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "limit"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tray-icon = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.30"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
futures-util = "0.3"
http-body-util = "0.1"

# Phase 3 - Security & Auth
argon2 = "0.5"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
jsonwebtoken = "9"
governor = "0.6"
qrcode = { version = "0.14", features = ["svg"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
data-encoding = "2"
zxcvbn = "3"

[dev-dependencies]
tower = "0.5"
