[package]
name = "nodedesk-agent"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "nodedesk_agent"
path = "src/lib.rs"

[[bin]]
name = "nodedesk-agent"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
rust-embed = "8"
mime_guess = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tray-icon = "0.15"
crossbeam-channel = "0.5"
open = "5"
arboard = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
sysinfo = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
http-body-util = "0.1"

keyring = "2"

# Phase 3 - Security & Auth
argon2 = "0.5"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
jsonwebtoken = "9"
governor = "0.6"
qrcode = { version = "0.14", features = ["svg"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
data-encoding = "2"
zxcvbn = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
aes-gcm = "0.10"
regex = "1"
dirs = "5"

# Windows message pump for tray icon
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tower = "0.5"
zxcvbn = "3"
